# ChangeLog for sys-apps/pcsc-tools
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-tools/ChangeLog,v 1.5 2010/06/19 02:13:31 nerdboy Exp $

  19 Jun 2010; Steve Arnold <nerdboy@gentoo.org> pcsc-tools-1.4.15.ebuild,
  +files/pcsc-tools_no-gtk.patch:
  Added gtk use flag to make the gtk2-perl dep (and gscriptor GUI) optional
  per bug 323229.

  08 Jun 2009; Steve Arnold <nerdboy@gentoo.org> Manifest:
  Updating manifest for bug #271809.

  05 Apr 2009; Steve Arnold <nerdboy@gentoo.org> pcsc-tools-1.4.15.ebuild:
  Fixed some QA issues and updated the smartcart_list file.

  05 Apr 2009; Steve Arnold <nerdboy@gentoo.org> pcsc-tools-1.4.15.ebuild:
  Temporarily dropping ~arm for some additional platform testing (see bug 
  #264983).

*pcsc-tools-1.4.15 (23 Jan 2009)

  23 Jan 2009; Steve Arnold <nerdboy@gentoo.org> -pcsc-tools-1.4.14.ebuild,
  +pcsc-tools-1.4.15.ebuild:
  Updated to new upstream release and changed to static hardware list (moved 
  the data file from SRC_URI to DISTFILES).  Should close bugs #142037 and 
  #255682).

*pcsc-tools-1.4.14 (11 Jan 2009)

  11 Jan 2009; Steve Arnold <nerdboy@gentoo.org> +files/smartcard.svg,
  +metadata.xml, +pcsc-tools-1.4.14.ebuild:
  New ebuild for pcsc-tools. Ebuild written by me. Very handy for setting 
  up and using PC/SC smartcards (tools that go with the daemon package).  
  Tested with a USB smartcard reader (Axalto Reflex USB v3).  The older 
  reader I tried (mentioned on several forum posts) won't work without 
  a firmware update.
