@@ -1,7 +1,9 @@
 AUX pcsc-tools_no-gtk.patch 389 RMD160 c38bfb64b561deb5cab0159a48e1092a5094ee06 SHA1 55e2eea17fea6a78beb6bf77c9a29659d6e07c04 SHA256 6d3befa993e1b7e866f3060b961b7c60b0b4f5017b77ab8355a8ef48137a2a7e
 AUX smartcard.svg 13308 RMD160 0ac4082b8e27b9ec661e70328e964d32a70b4ea7 SHA1 db036b0bb1f98fd363262faa3b5435c705f78715 SHA256 ad846a422e0ca0967a4bbee57c61c9b481df4559470ea6145d0cc7cfd502dc5b
 DIST pcsc-tools-1.4.15.tar.gz 64090 RMD160 e5f278a43cf138a6bcdaa1ac478d64fb123bab5b SHA1 cdc37f7763ebeb927487585d4eecd84d8e366421 SHA256 a46ade975d4dd5722e9f087bbb26410f2eda5d889d078d0d5eeee15b9133e4b6
+DIST pcsc-tools-1.4.16.tar.gz 78732 RMD160 e01517259bf3c24cb8fe38529cea9dbd6cdeeb24 SHA1 10dffcee881f3846420d267e755e84d31c8d69e6 SHA256 dd86355430d39f3a15da1e9d1c65779c75a237b87c7ee9cb30badbc283e253fa
 DIST smartcard_list.txt 74636 RMD160 ce99dd5df9a33b185bf40afb03e4cfa6a358be78 SHA1 5dfd096fee336b6e226e07478829a02a49920163 SHA256 2e0ae30bc772d1631c47388ff53b841b76a14543c0547da53826923067af238b
 EBUILD pcsc-tools-1.4.15.ebuild 2040 RMD160 eada583398f983da538f6708c64a439ea19c0d5d SHA1 a8c489170df375fba57e9854d9e91e9f29b5460d SHA256 e08a2276d736bbe759fa0cd111c5c3c91da54aabcc1b2cae0a77b75e14979abe
-MISC ChangeLog 1584 RMD160 6731a3f98039975ab129752b808d42b053e08df8 SHA1 cfbffaec1565f780b1ec49531742c7b6e5212455 SHA256 76031fd5a127622c0cad6b814f6901b74c7664d0066808159fd9bda37c370dea
+EBUILD pcsc-tools-1.4.16.ebuild 2048 RMD160 b833f90fbc8544556784929bc046c1a419494879 SHA1 75a8dffe877534495d6bb041d84b2d252ac934a5 SHA256 226cc5b7bd91a079e7c5930aead39fff3b16b4c7cce6d4a920678499191bbafb
+MISC ChangeLog 1738 RMD160 0b986dfcd0e95f992d9c856defa21b665d4b0047 SHA1 fbd15b81ae71372f2e4bf443283d93224effdd1a SHA256 f29f58abe4d740d509f34002190f19dea1cb6cccf3a108c84cde99ea7f8ed805
 MISC metadata.xml 392 RMD160 a0b7f7f213da5f7b7f79ba13a1cd4df444558d33 SHA1 d38241d582bb438599511cddce5fe51df301505c SHA256 698922e4324835d3a61042acffd70999ca6e1b1486a2347a16aabf0062a6c42e
