@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/pcsc-tools
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-tools/ChangeLog,v 1.5 2010/06/19 02:13:31 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-tools/ChangeLog,v 1.6 2010/06/29 00:29:57 arfrever Exp $
+
+*pcsc-tools-1.4.16 (29 Jun 2010)
+
+  29 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +pcsc-tools-1.4.16.ebuild:
+  Version bump.
 
   19 Jun 2010; Steve Arnold <nerdboy@gentoo.org> pcsc-tools-1.4.15.ebuild,
   +files/pcsc-tools_no-gtk.patch:
